<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.icehockeyfordummies.user_interface.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/fond"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageHome"
            android:layout_width="441dp"
            android:layout_height="251dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/main" />

        <Button
            android:id="@+id/buttonFBleagues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:onClick="toFirebaseLeagues"
            android:text="@string/leagues"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_firebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:onClick="toFirebase"
            android:text="@string/createDB"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_delete_firebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:onClick="toDeleteFirebase"
            android:text="@string/deleteFBDB"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:onClick="toSettings"
            android:text="@string/settings"
            android:textSize="24sp" />


    </LinearLayout>

</RelativeLayout>
