<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context="com.example.icehockeyfordummies.user_interface.LeagueActivity">


    <EditText
        android:id="@+id/add_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="364dp"
        android:hint="@string/newleaguename"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_add_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_league"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:backgroundTint="#ffffff"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingTop="2dp"
        android:paddingRight="12dp"
        android:paddingBottom="2dp"
        android:text="@string/ADD"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="468dp"
        android:hint="@string/bef"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_league2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_league"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="510dp"
        android:hint="@string/af"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_update_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_league2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="#ffffff"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingTop="2dp"
        android:paddingRight="12dp"
        android:paddingBottom="2dp"
        android:text="@string/EDIT"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/list_view_league"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:layout_alignTop="@+id/btn_add_league"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-327dp"
        android:layout_marginBottom="271dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_update_league"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/lea"
        android:textColor="@android:color/black"
        android:textSize="30sp" />


</RelativeLayout>
