<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context="com.example.icehockeyfordummies.user_interface.SettingsActivity">

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="168dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="51dp"
        android:src="@drawable/settings" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="257dp"
        android:backgroundTint="#ffffff"
        android:onClick="toAbout"
        android:text="@string/about"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/btn_radio_langue"
        android:layout_width="177dp"
        android:layout_marginStart="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="386dp"
        android:layout_marginBottom="-42dp">

        <RadioButton
            android:id="@+id/radioButtonFR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_radio_langue"
            android:text="@string/français"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButtonEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anglais"
            android:textSize="24sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settingsImage"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="226dp"
        android:text="@string/changelangue"
        android:textSize="24sp" />

</RelativeLayout>