<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context="com.example.icehockeyfordummies.user_interface.TeamActivity">


    <EditText
        android:id="@+id/add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="507dp"
        android:hint="@string/newleaguename"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_player"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#ffffff"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingTop="2dp"
        android:paddingRight="12dp"
        android:paddingBottom="2dp"
        android:text="@string/ADD"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/list_view_player"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_alignTop="@+id/btn_add_player"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-474dp"
        android:layout_marginBottom="102dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/players"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/fromL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="143dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/fromC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fromL"
        android:layout_alignBottom="@+id/textView3"
        android:text="TextView" />


</RelativeLayout>
